--- a/src/MapView/components/Map/map.module.css
+++ b/src/MapView/components/Map/map.module.css
@@ -7,7 +7,7 @@
   margin: 0 auto;
   border: 1.5px solid #37353f;
   border-radius: 0 0 125px 3px/3px 85px 5px 55px;
-  background: rgba(224, 200, 213, 0.9);
+  background: rgb(255, 237, 247);
   box-shadow: 0 1px 3px rgb(0 0 0 / 40%);
 }
 
