--- a/src/SettingsView/components/Slider/slider.module.css
+++ b/src/SettingsView/components/Slider/slider.module.css
@@ -69,30 +69,10 @@ div[class^='thumb'] {
   width: 50px;
   height: 48px;
   padding: 0.38rem 1rem;
-  border: 3px solid #37353f;
+  border: 2px solid #282828;
   border-radius: 50%;
-  box-shadow: 3px 3px 0 0 #37353f;
-  background-size: 10px 10px, 10px 10px;
-  background-repeat: repeat-x;
-  background-color: rgba(224, 200, 213, 0.9);
-  background-image: repeating-linear-gradient(
-      45deg,
-      transparent,
-      transparent 2px,
-      #396afc 2px,
-      #396afc 4px,
-      transparent 4px,
-      transparent 9px
-    ),
-    repeating-linear-gradient(
-      -45deg,
-      transparent,
-      transparent 2px,
-      #396afc 2px,
-      #396afc 4px,
-      transparent 4px,
-      transparent 9px
-    );
+  background-color: rgb(255, 237, 247);
+  color: #09162c;
   font-size: 0.8rem;
   text-align: center;
   line-height: 38px;
