--- a/src/common/components/Logo/logo.module.css
+++ b/src/common/components/Logo/logo.module.css
@@ -6,8 +6,8 @@
   padding-left: 0.3rem;
   padding-right: 0.3rem;
   border: 1px solid #002f3c;
-  background-color: #f1e3ec;
-  color: rgba(25, 26, 27, 1);
+  background-color: rgb(255, 237, 247);
+  color: #09162c;
   box-shadow: 1px 1px 0 #002f3c;
   font-family: Space Mono, monospace;
   font-size: 0.775rem;
