--- a/src/common/components/Nav/nav.module.css
+++ b/src/common/components/Nav/nav.module.css
@@ -25,7 +25,3 @@
   line-height: 1.5;
   cursor: pointer;
 }
-
-/* a:focus {
-  outline: dotted 2px blue;
-} */
